First version of styling to index.html
changed company name and navigation links to white for visibility

removed inline css from shop now button: style="width: 100px;height: 30px;font-size: medium;color: rgb(255, 199, 199);background-color: rgb(199, 47, 39);"

removed inline styling from customer reviews :style="border: 2px solid black; margin: 0;"

--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,17 @@ div{
 	height: 30px;
 	font-size: medium;
 }
+.customer-reviews{
+	display: flex;
+	flex-wrap: wrap;
+	background-color: #ddd;
+	padding: 20px;
+	margin: 20px;
+}
+footer{
+	background-color: #333;
+	padding: 10px;
+	margin: 0;
+	color: white;
+	text-align: center;
+}	
