--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* File: login.html
+     Group Members: Uchenna Osemeka, Caue Rodrigues
+     UCID: 30132267
+     Due Date: Feb 26, 2024 */
 header{
 	background-color: #333;
 	padding: 20px;
